<resources>
    <string name="app_name">QuizApp</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="start_your_quiz_now">Loading...</string>
    <string name="full_name">username</string>
    <string name="your_medals_award_all_shown_here">Total Score</string>
</resources>