<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:textSize="30sp"
        android:text="@string/sign_up"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="35sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:hint="@string/full_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="35sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:layout_marginHorizontal="35sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="65sp"
        android:layout_marginHorizontal="35sp"
        android:text="Register"
        android:textSize="20sp"
        app:cornerRadius="0sp"
        android:id="@+id/registerBtn"
        android:visibility="visible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginHorizontal="35sp"
        android:textSize="20sp"
        android:visibility="gone"
        android:background="#6750A3"
        android:id="@+id/signIn_loading"
        >

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:progress="@integer/material_motion_duration_long_1"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="35dp"
        android:gravity="center"
        android:text="@string/already_have_an_account_sign_in"
        android:id="@+id/ref_signIn"/>

</LinearLayout>